Feat: 접근 비밀번호를 PathVar로 입력받을 수 있음